Finalisation totale du logiciel (version finale)