@@ -149,16 +149,17 @@
                     <target>17</target>
                     <release>17</release>
                 </configuration>
-            </plugin>
-            <plugin>
+            </plugin>            <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>fr.marieteam.pdf.marieteampdf/fr.marieteam.pdf.marieteampdf.Launcher</mainClass>
+                    <mainClass>fr.marieteam.pdf.marieteampdf.MainApp</mainClass>
                     <options>
                         <option>--add-opens</option>
                         <option>java.base/java.lang=ALL-UNNAMED</option>
+                        <option>--add-modules</option>
+                        <option>javafx.controls,javafx.fxml,javafx.graphics,javafx.base,javafx.web,javafx.swing,javafx.media</option>
                     </options>
                     <launcher>app</launcher>
                     <jlinkImageName>app</jlinkImageName>
@@ -201,10 +202,9 @@
                         <goals>
                             <goal>shade</goal>
                         </goals>
-                        <configuration>
-                            <transformers>
+                        <configuration>                            <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>fr.marieteam.pdf.marieteampdf.Launcher</mainClass>
+                                    <mainClass>fr.marieteam.pdf.marieteampdf.MainApp</mainClass>
                                 </transformer>
                             </transformers>
                             <finalName>MarieTeamPDF</finalName>
@@ -239,9 +239,8 @@
                         <configuration>                            <headerType>gui</headerType>
                             <outfile>${project.build.directory}/MarieTeamPDF.exe</outfile>
                             <jar>${project.build.directory}/MarieTeamPDF.jar</jar>
-                            <errTitle>MarieTeam PDF Generator</errTitle>
-                            <classPath>
-                                <mainClass>fr.marieteam.pdf.marieteampdf.Launcher</mainClass>
+                            <errTitle>MarieTeam PDF Generator</errTitle>                            <classPath>
+                                <mainClass>fr.marieteam.pdf.marieteampdf.MainApp</mainClass>
                             </classPath>
                             <jre>
                                 <minVersion>17</minVersion>
